--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,4 +1,5 @@
 .button {
+  width: 220px;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
   background: hsla(267, 66%, 60%, 1);
@@ -7,7 +8,7 @@
   background: -webkit-linear-gradient(to top left, hsla(267, 66%, 60%, 1) 0%, hsla(317, 100%, 74%, 1) 100%);
   color: white;
   margin: 20px 0;
-  padding: $padding calc($padding * 1.25);
+  padding: 16px;
   border: none;
   border-radius: $border-radius-button;
   -webkit-box-shadow: $box-shadow-button;
