--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -1,5 +1,6 @@
 /* Only applies to header logo */
 .logo-container {
+  width: 100%;
   margin: 0;
   padding-top: calc($padding * 1.25);
   padding-bottom: calc($padding * 0.7);
