--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -56,13 +56,10 @@
   }
 
   &__image {
-    flex: 1 1 67%;
-    height: 100%;
-    width: 100%;
+    height: 70%;
     position: relative;
 
     & img {
-      max-height: 180px; /* To stop image from taking too much space */
       height: 100%;
       width: 100%;
       object-fit: cover;
@@ -80,15 +77,15 @@
     }
   }
 
-  &__placeholder-image {
-    background-color: $color-grey-medium; /* REMOVE WHEN DONE */
+  &__placeholder-image { /* REMOVE WHEN DONE */
+    background-color: $color-grey-medium;
     height: 100%;
     width: 100%;
     border-radius: $border-radius-image;
   }
 
   &__details {
-    flex: 1 1 33%;
+    height: 30%;
     display: flex;
     justify-content: space-between;
     align-items: center;
